...
    <string name="news_empty">The event organizer hasn\'t published any news yet.</string>
    <string name="my_schedule_empty">There is currently no saved activities for this event</string>
    <string name="send_news_failed">Cannot publish news. Try again later!</string>

    <string name="main_fragment_join_event">Join</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_account_display">My account</string>
    <string name="title_activity_event_picking">EventPickingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login_facebook">login with facebook</string>

    <string name="invalid_email_error">Invalid email address</string>
    <string name="error_field_required">Required field</string>
    <string name="error_field_invalid">Invalid value</string>
    <string name="empty_password_error">The password cannot be empty</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="generic_auth_error">Could not authenticate. Unknown error.</string>
    <string name="help_text_activity_event_picking">Please select an event to continue</string>
    <string name="help_text_go_join_events">Please go explore and join an event to continue !</string>
    <string name="joined_help_text_activity_event_picking">Events you joined:</string>
    <string name="not_joined_help_text_activity_event_picking">Click here to go explore events !</string>
...
    <string name="event_successfully_unjoined">Event successfully unjoined !</string>

    <string name="successful_login_toast">Signed in</string>
    <string name="successful_registration_toast">Registered successfully</string>
    <string name="logout_toast">Logged out</string>

    <string name="email_field">Email address</string>
    <string name="password_field">Password</string>
    <string name="password_confirmation_field">Password confirmation</string>

    <string name="login_button">Sign in</string>
    <string name="signup_button">Sign up</string>
    <string name="logout_button">Log out</string>
    <string name="account_button">My account</string>
    <string name="back_button">Back</string>
    <string name="join_event_event_item_btn">Join Event</string>
    <string name="goto_event_btn">Go to event</string>
    <string name="add_button">Add</string>
    <string name="add_user_success">Add request sent</string>
    <string name="add_user_failure">Could not send add request</string>
    <string name="remove_user_success">Removal request sent</string>
    <string name="remove_user_failure">Could not send the removal request</string>

    <string name="main_nav_item_activity_event_showcase">Description</string>
    <string name="map_nav_item_activity_event_showcase">Map</string>
    <string name="schedule_nav_item_activity_event_showcase">Schedule</string>
    <string name="ticket_nav_item_activity_event_showcase">Tickets</string>
...
    <string name="schedule_create_form_hint_description">Description</string>
    <string name="schedule_create_form_hint_duration">Duration</string>
    <string name="create_schedule_item_value_missing">The following field cannot be empty</string>
    <string name="create_schedule_item_value_length">The following field needs to be longer</string>
    <string name="schedule_create_form_hint_begin_time">Begin time of the scheduled element</string>
    <string name="event_image">Event image</string>
    <string name="remove_button">Remove</string>
    <string name="send_notification_form_error">Field cannot be empty</string>
    <string name="congratulations">Congratulations, you have found the secret credits ! We really hope that you enjoy &app_name; !</string>
    <string name="credits">This app was proposed to you by the Susanfe team, including :</string>
    <string name="names_of_the_authors">Antoine Crettenand\nLouis Vialar\nNicolas d\'Argenlieu\nRobin Zbinden\nStanislas Jouven\nTimothée Floure\nValentin Quelquejay</string>

    <!-- Edition Fragment text-->
...
